# NonSteamLaunchers-On-Steam-Deck

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .shellcheckrc  .tool-versions  AGENTS.md  CHANGELOG.md  CN.txt  DONTREADME.md  LICENSE  Launcher.desktop  NSLGameScanner.py  NSLPlugin.desktop  NSLPluginInstaller.sh  NonSteamLaunchers.desktop  NonSteamLaunchers.sh  README.md  SDH-GameThemeMusicPatcher.sh  _config.py  config.env  config.py  main.py  package-lock.json  pyproject.toml  release-please-config.json  requirements.txt  ruff.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 🐞-bug-report--linux---steamos-.md  💡-feature-request--linux---steamos-.md
.github/workflows/: release-please.yml
Modules/charset_normalizer/: version.py
Modules/requests/: __init__.py
Modules/steamgrid/: asset.py  author.py  enums.py  steamgrid.py
Modules/vdf/: __init__.py
humble-app/: Humble-scheme-handler.desktop  handle-humble-scheme  start-humble.cmd
proxycache/: Procfile  proxycache.py  requirements.txt
proxycache/steamgrid/: game.py  http.py
