[project]
name = "non-steam-launchers"
version = "4.2.3"
description = ""
authors = [
    { name = "moraroy", email = "88516395+moraroy@users.noreply.github.com" },
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" },
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = "MIT"

dependencies = [
    "python-decouple~=3.8",
    "python-steamgriddb>=1.0.5,<2",
    "requests>=2.31.0,<3",
    "vdf~=3.4",
]

[dependency-groups]
dev = [
    "coverage>=7.3.2,<8",
    "hypothesis[cli]>=6.88.4,<7",
    "icecream>=2.1.3,<3",
    "ipython>=9.0.2,<10",
    "pytest>=8.0.2,<9",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=6.0.0,<8",
    "pytest-datafiles>=3.0.0,<4",
    "pytest-xdist>=3.4.0,<4",
    "rich>=14.0.0,<15",
    "ruff>=0.12.1,<0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
